--- a/02/08/01.htm
+++ b/02/08/01.htm
@@ -136,12 +136,7 @@ function poi(input_var){
 			var c = document.createElement('canvas');
 			var ctx = c.getContext('2d');
 			c.width = 1280;
-			c.height = 720;
-      if(c.width>c.height){
-        c.width=c.width+2;
-      }else{
-        c.height=c.height+2;
-      }
+			c.height = 720+2;
 			ctx.drawImage(img,0,0, c.width , c.height );//
 			var img_new = c.toDataURL("image/jpeg");
 			//console.log( img_new );
