--- a/02/08/02.htm
+++ b/02/08/02.htm
@@ -25,7 +25,8 @@ document.addEventListener("DOMContentLoaded",function(e){
 	console.log( "DOMContentLoaded" );
 	var bb=document.querySelector("body");
 	var str=`
-Go-Toubun no Hanayome - 05
+五等分的新娘 [05]
+
   `;
 	bb.insertAdjacentHTML('beforeend', '<h1>'+str+'</h1>');
 	document.title=str;
